* PMD: AvoidFileStream * Catch NoSuchFileException anywhere we catch FileNotFoundException,   since these can also happen.